--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				  <i class="fa fa-square-o fa-stack-2x"></i>
 				  <i class="fa fa-linkedin fa-stack-1x"></i>
 				</span>
-				linkedin.com/in/eljohn-duñgo-54a83a100/
+				linkedin.com/in/eljohnslash/
         	</a><br>
         	<a href="https://www.facebook.com/eljohnslash/" style="color: white;" target="_blank">
         		<span class="fa-stack fa-lg">
