--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</span>
 				dungo.eljohn@gmail.com
         	</a><br>
-        	<a href="https://www.linkedin.com/in/eljohn-duñgo-54a83a100/" style="color: white;" target="_blank">
+        	<a href="https://www.linkedin.com/in/eljohnslash/" style="color: white;" target="_blank">
         		<span class="fa-stack fa-lg">
 				  <i class="fa fa-square-o fa-stack-2x"></i>
 				  <i class="fa fa-linkedin fa-stack-1x"></i>
